--- a/14.4.4_RandomForest Covid Case Study/RandomForest_casestudy_covid19.ipynb
+++ b/14.4.4_RandomForest Covid Case Study/RandomForest_casestudy_covid19.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -38,22 +38,7 @@
     "id": "z_-6xEUFSpNU",
     "outputId": "75184be3-e99c-4c44-a638-824a9ba0b1e9"
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'dot'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/rt/9nm_7gz557x94zz8z2yl0fgm0000gn/T/ipykernel_51748/3273952181.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m# Convert to png using system command (requires Graphviz)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msubprocess\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dot'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-Tpng'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tree.dot'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-o'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tree.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-Gdpi=600'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# Display in jupyter notebook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/subprocess.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    347\u001b[0m     \u001b[0mretcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ls\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-l\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    348\u001b[0m     \"\"\"\n\u001b[0;32m--> 349\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    350\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    351\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask)\u001b[0m\n\u001b[1;32m    949\u001b[0m                             encoding=encoding, errors=errors)\n\u001b[1;32m    950\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 951\u001b[0;31m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[1;32m    952\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    953\u001b[0m                                 \u001b[0mstartupinfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreationflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session)\u001b[0m\n\u001b[1;32m   1819\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0merrno_num\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1820\u001b[0m                         \u001b[0merr_msg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1821\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1822\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1823\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'dot'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "iris = load_iris()\n",
@@ -76,12 +61,12 @@
     "                precision = 2, filled = True)\n",
     "\n",
     "# Convert to png using system command (requires Graphviz)\n",
-    "from subprocess import call\n",
-    "call(['dot', '-Tpng', 'tree.dot', '-o', 'tree.png', '-Gdpi=600'])\n",
+    "# from subprocess import call\n",
+    "# call(['dot', '-Tpng', 'tree.dot', '-o', 'tree.png', '-Gdpi=600'])\n",
     "\n",
-    "# Display in jupyter notebook\n",
-    "from IPython.display import Image\n",
-    "Image(filename = 'tree.png')"
+    "# # Display in jupyter notebook\n",
+    "# from IPython.display import Image\n",
+    "# Image(filename = 'tree.png')"
    ]
   },
   {
@@ -120,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -143,13 +128,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "CiJQlTK1SpNd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>global_num</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>infection_case</th>\n",
+       "      <th>infection_order</th>\n",
+       "      <th>infected_by</th>\n",
+       "      <th>contact_number</th>\n",
+       "      <th>symptom_onset_date</th>\n",
+       "      <th>confirmed_date</th>\n",
+       "      <th>released_date</th>\n",
+       "      <th>deceased_date</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangseo-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000000002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jungnang-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000003</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jongno-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.002000e+09</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000000004</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Mapo-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000000005</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Seongbuk-gu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>released</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_id  global_num     sex  birth_year  age country province  \\\n",
+       "0  1000000001         2.0    male      1964.0  50s   Korea    Seoul   \n",
+       "1  1000000002         5.0    male      1987.0  30s   Korea    Seoul   \n",
+       "2  1000000003         6.0    male      1964.0  50s   Korea    Seoul   \n",
+       "3  1000000004         7.0    male      1991.0  20s   Korea    Seoul   \n",
+       "4  1000000005         9.0  female      1992.0  20s   Korea    Seoul   \n",
+       "\n",
+       "          city disease        infection_case  infection_order   infected_by  \\\n",
+       "0   Gangseo-gu     NaN       overseas inflow              1.0           NaN   \n",
+       "1  Jungnang-gu     NaN       overseas inflow              1.0           NaN   \n",
+       "2    Jongno-gu     NaN  contact with patient              2.0  2.002000e+09   \n",
+       "3      Mapo-gu     NaN       overseas inflow              1.0           NaN   \n",
+       "4  Seongbuk-gu     NaN  contact with patient              2.0  1.000000e+09   \n",
+       "\n",
+       "   contact_number symptom_onset_date confirmed_date released_date  \\\n",
+       "0            75.0         2020-01-22     2020-01-23    2020-02-05   \n",
+       "1            31.0                NaN     2020-01-30    2020-03-02   \n",
+       "2            17.0                NaN     2020-01-30    2020-02-19   \n",
+       "3             9.0         2020-01-26     2020-01-30    2020-02-15   \n",
+       "4             2.0                NaN     2020-01-31    2020-02-24   \n",
+       "\n",
+       "  deceased_date     state  \n",
+       "0           NaN  released  \n",
+       "1           NaN  released  \n",
+       "2           NaN  released  \n",
+       "3           NaN  released  \n",
+       "4           NaN  released  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url ='SouthKoreacoronavirusdataset/PatientInfo.csv'\n",
     "df = pd.read_csv(url)\n",
@@ -158,26 +329,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GUY5Cp2cSpNg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2218, 18)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "oxKUKR_pSpNi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VarName</th>\n",
+       "      <th>NullCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>disease</td>\n",
+       "      <td>2199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>deceased_date</td>\n",
+       "      <td>2186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>infection_order</td>\n",
+       "      <td>2176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>symptom_onset_date</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>released_date</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>contact_number</td>\n",
+       "      <td>1807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>infected_by</td>\n",
+       "      <td>1749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>infection_case</td>\n",
+       "      <td>1055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>global_num</td>\n",
+       "      <td>904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>birth_year</td>\n",
+       "      <td>454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>age</td>\n",
+       "      <td>261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>confirmed_date</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>state</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>city</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               VarName  NullCount\n",
+       "0              disease       2199\n",
+       "1        deceased_date       2186\n",
+       "2      infection_order       2176\n",
+       "3   symptom_onset_date       2025\n",
+       "4        released_date       1995\n",
+       "5       contact_number       1807\n",
+       "6          infected_by       1749\n",
+       "7       infection_case       1055\n",
+       "8           global_num        904\n",
+       "9           birth_year        454\n",
+       "10                 age        261\n",
+       "11                 sex        145\n",
+       "12      confirmed_date        141\n",
+       "13               state         88\n",
+       "14                city         65"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Counts of null values \n",
     "na_df=pd.DataFrame(df.isnull().sum().sort_values(ascending=False)).reset_index()\n",
@@ -187,13 +498,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NhPtmRWdSpNl"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "isolated    1791\n",
+       "released     307\n",
+       "deceased      32\n",
+       "Name: state, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#counts of response variable values\n",
     "df.state.value_counts()"
